fix: Adding z-index for filters__values on mobile

--- a/src/components/Filter/index.css
+++ b/src/components/Filter/index.css
@@ -1,6 +1,6 @@
 .filter {
+  border-left: 1px solid var(--white);
   position: relative;
-  border-left: 1px solid var(--white)
 }
 
 .filter:first-of-type {
@@ -18,6 +18,7 @@
   overflow: auto;
   position: absolute;
   top: 4rem;
+  z-index: 5;
 }
 
 .filer__values-active {
